--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <!--<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}" />-->
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}" />
         <title>{{title}}</title>
     </head>
     <body>
