Completed assignment objectives.

--- a/templates/signup-form.html
+++ b/templates/signup-form.html
@@ -11,9 +11,9 @@
   #}
       <p class="error"><label for="username">Username: <input type="text" name="username" value="{{ username }}"/></label> {{username_error}}</p>
       <p></p>
-      <p class="error"><label for="password">Password: <input type="text" name="password" /></label> {{password_error}}</p>
+      <p class="error"><label for="password">Password: <input type="password" name="password" /></label> {{password_error}}</p>
       <p></p>
-      <p class="error"><label for="verifypw">Verify Password: <input type="text" name="verifypw" /></label> {{verifypw_error}}</p>
+      <p class="error"><label for="verifypw">Verify Password: <input type="password" name="verifypw" /></label> {{verifypw_error}}</p>
       <p></p>
       <p class="error"><label for="email">Email: <input type="text" name="email" value="{{ email }}"/></label> {{email_error}}</p>
 
