--- a/templates/signup-form.html
+++ b/templates/signup-form.html
@@ -1,27 +1,32 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h2>Sign Up Form</h2>
-<form action="" method="post">
-  {#
-    Username
-    Password
-    Verify Password
-    Email Address
-  #}
-      <p class="error"><label for="username">Username:
-        <input type="text" name="username" value="{{ username }}"/></label> {{username_error}}</p>
-      <p></p>
-      <p class="error"><label for="password">Password:
-        <input type="password" name="password" /></label> {{password_error}}</p>
-      <p></p>
-      <p class="error"><label for="verifypw">Verify Password:
-        <input type="password" name="verifypw" /></label> {{verifypw_error}}</p>
-      <p></p>
-      <p class="error"><label for="email">Email:
-        <input type="text" name="email" value="{{ email }}"/></label> {{email_error}}</p>
+  <h2>Sign Up</h2>
+  <form action="" method="post">
+    {#
+      Username
+      Password
+      Verify Password
+      Email Address
+      #}
+    <label for="username">Username:
+      <input type="text" name="username" value="{{ username }}"/></label>
+      <p class="error"> {{username_error}}</p>
+    <p></p>
+    <label for="password">Password:
+      <input type="password" name="password" /></label>
+      <p class="error"> {{password_error}}</p>
+    <p></p>
+    <label for="verifypw">Verify Password:
+      <input type="password" name="verifypw" /></label>
+      <p class="error"> {{verifypw_error}}</p>
+    <p></p>
+    <label for="email">Email:
+      <input type="text" name="email" value="{{ email }}"/></label>
+      <p class="error"> {{email_error}}</p>
 
-      <input type="submit" value="Sign Up"/>
-    </form>
+    <input type="submit" value="Sign Up"/>
+  </form>
+
 
 {% endblock %}
